...
                padding: EdgeInsets.only(left:50,right:50),
                child:Column(
                   mainAxisAlignment: MainAxisAlignment.center,
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children:[
                     TextField(
                       key : Key("enterYourNameText"),
                       decoration: InputDecoration(
                      enabledBorder: const UnderlineInputBorder(borderSide: const BorderSide(color: Colors.lightBlue),),
                      fillColor: Colors.white,
                      hintText: 'Enter your name',
                      hintStyle: TextStyle(fontSize: 15.0, color: Colors.lightBlue),),
                      controller: nameField,
...
                            MaterialPageRoute(builder: (context) => new ListAppPage(nameField.text)),);
                          }
                          },
                        color: Colors.blue,
                        shape: RoundedRectangleBorder(borderRadius: new BorderRadius.circular(18.0),
                            side: BorderSide(color: Colors.lightBlueAccent) ),
                        child: Text('Enter',
                        style: TextStyle(fontSize: 15,color: Colors.white)),),
                ])),
            ],
          ),
          ),
      ));
...
